--- a/HoBShare Assignment 054/Base.lproj/Main.storyboard
+++ b/HoBShare Assignment 054/Base.lproj/Main.storyboard
@@ -291,9 +291,12 @@
                                         </view>
                                         <color key="backgroundColor" red="0.0" green="0.50196081400000003" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                         <size key="customSize" width="100" height="50"/>
+                                        <connections>
+                                            <outlet property="HobbyLabel" destination="0AW-xk-IkT" id="spk-W3-F3W"/>
+                                        </connections>
                                     </collectionViewCell>
                                 </cells>
-                                <collectionReusableView key="sectionHeaderView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="DwV-rN-Swb">
+                                <collectionReusableView key="sectionHeaderView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="HobbyCategoryHeader" id="DwV-rN-Swb" customClass="HobbiesCollectionViewHeader" customModule="HoBShare_Assignment_054" customModuleProvider="target">
                                     <rect key="frame" x="0.0" y="0.0" width="1000" height="50"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                     <subviews>
@@ -305,6 +308,9 @@
                                             <nil key="highlightedColor"/>
                                         </label>
                                     </subviews>
+                                    <connections>
+                                        <outlet property="categoryLabel" destination="hyg-L9-YdG" id="8MY-RT-F9J"/>
+                                    </connections>
                                 </collectionReusableView>
                                 <connections>
                                     <outlet property="dataSource" destination="z8A-yD-Eu0" id="a9D-iF-quO"/>
@@ -346,6 +352,9 @@
                                         </view>
                                         <color key="backgroundColor" red="0.0" green="0.50196081400000003" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                         <size key="customSize" width="100" height="50"/>
+                                        <connections>
+                                            <outlet property="HobbyLabel" destination="yfy-nh-Etw" id="V18-JM-MS2"/>
+                                        </connections>
                                     </collectionViewCell>
                                 </cells>
                                 <connections>
@@ -387,7 +396,7 @@
                     </view>
                     <navigationItem key="navigationItem" title="Choose 3 Hobbies" id="H4X-Hg-lxg"/>
                     <connections>
-                        <outlet property="allHobbies" destination="Kit-0k-GY8" id="XdF-J7-BId"/>
+                        <outlet property="allHobbies" destination="Kit-0k-GY8" id="vds-Pv-dyi"/>
                         <outlet property="collectionView" destination="0Fr-C8-JB9" id="UYk-Hj-7Nt"/>
                     </connections>
                 </viewController>
